re PR c++/9798 (Infinite recursion (segfault) in cp/decl.c:push_using_directive with recusive using directives)

PR c++/9798
        * decl.c (push_using_directive): Push before recursing.

From-SVN: r64135